# pandas-query-generator

./: .gitattributes  .gitignore  README.md  bun.lockb  index.html  justfile  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
assets/: index-1b888351.js  index-31a03b0a.css  index-414b9d48.js  index-5dcab656.js  index-b2ccb9be.js  pyodide.worker-db7e9865.js
docs/: api_reference.html  basic.css  genindex.html  index.html  index.rst.txt  index_1.html  justfile  modules.html  objects.inv  paper.tex  pqg.html  pqg.rst.txt  pqg_arguments.html  pqg_entity.html  pqg_generator.html  pqg_merge.html  pqg_operation.html  pqg_projection.html  pqg_query.html  pqg_query_builder.html  pqg_query_pool.html  pqg_query_structure.html  pqg_schema.html  pqg_selection.html  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/config/: conf.py  index.rst  modules.rst
docs/source/: conf.py  modules.rst
examples/: data_structure_tpch_csv.json  query_parameters.json  query_structure.json
examples/complex/: multi-line.txt  single-line.txt
examples/customer/: multi-line.txt  schema.json  schema.schema.json  single-line.txt
examples/simple/: multi-line.txt  schema.json  single-line.txt
examples/sports/: multi-line.txt  schema.json  schema.schema.json  single-line.txt
examples/tpch/: multi-line.txt  schema.schema.json  single-line.txt
results/: merged_queries_auto_sf0000.txt  multi-line.txt  queries.txt  single-line.txt
src/: __main__.py  arguments.py  schema.py
src/pandas_query_generator/: __init__.py  __main__.py  aggregate.py  arguments.py  condition.py  entity.py  generator.py  generator2.py  generator3.py  group_by.py  group_by_aggregation.py  merge.py  operation.py  operators.py  projection.py  queries.txt  query.py  query_builder.py  query_pool.py  query_structure.py  schema.py  selection.py  utils.py
src/pqg/: __main__.py  arguments.py  entity.py  generator.py  operation.py  query.py  query_pool.py  query_structure.py
tests/: test_generation.py  test_groubpy.py  test_integration.py  test_merge.py  test_query.py  test_query_pool.py  test_selection.py  test_utils.py
www/: bun.lockb  index.html  package.json  tailwind.config.js  vite.config.ts
www/src/: App.tsx  main.tsx
(+60 files in other folders)
