[project]
name = "pandas-query-generator"
version = "0.0.0"
description = "A synthetic pandas query generation tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "ruff>=0.6.7",
    "tdqm>=0.0.1",
]

[tool.ruff]
indent-width = 2
line-length = 100

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
indent-style = "space"
quote-style = "single"
